--- a/app/assets/stylesheets/library.scss
+++ b/app/assets/stylesheets/library.scss
@@ -63,8 +63,8 @@
 .library-index-list div{
     color: white;
     margin: 10px 0px 20px 0px;
-    width: 200px;
-    height: 200px;
+    // width: 200px;
+    // height: 200px;
 }
 
 .artist-index-container > .library-index-header,
