--- a/app/assets/stylesheets/playlist-detail.scss
+++ b/app/assets/stylesheets/playlist-detail.scss
@@ -43,10 +43,12 @@
     width: 250px;
     height: 250px;
     margin: 0 auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     &--small{
         background: image-url('playlist-image-small.png') no-repeat center center;
         width: 150px;
         height: 150px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     }
 }
 
@@ -54,6 +56,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 0px 50px 0px 50px;
 }
 
 .library-index-list > li {
